#474 create api for hide/unhide donation campaign feed
