# dong-service/routes/routes.go
@@ -74,7 +74,8 @@ func SetupRoutes(router *gin.Engine, cfg *config.Config) {
 		campaignsPublic.GET("/:id", campaignHandler.GetCampaign)
 		campaignsPublic.GET("/:id/top-contributors", campaignHandler.GetTopContributors)
 		campaignsPublic.POST("/:id/sync", statsHandler.SyncCampaign)
-		campaignsPublic.GET("/list-feed/:campaign_address", campaignFeedHandler.ListCampaignFeedsByAddress)
+		campaignsPublic.GET("/list-feed/:campaign_address", middleware.ParseTokenAndAddToContext(cfg.JWT.Secret), campaignFeedHandler.ListCampaignFeedsByAddress)
+		campaignsPublic.PATCH("/switch-visible-feed/:feed_hash", middleware.Authentication(cfg.JWT.Secret), campaignFeedHandler.SwitchVisibleFeed)
 
 		// Statistics routes (public)
 		statsPublic := v1.Group("/stats")
